# arm-kernel

./: .gitattributes  .gitignore  README.md  question.txt
core/: .gitignore  Makefile  README.md  bindings.h  compiledb.sh  image.ld
core/kernel/: hilevel.c  hilevel.h  lolevel.s
core/user/: console.c  libc.c  libc.h  philosopher.c  pipes.c  pipes.h  signals.c  signals.h
hilevel/: .gitignore  Cargo.toml  README.md  build.rs  build.sh  cbindgen.toml
hilevel/src/: allocator.rs  lib.rs  process.rs  state.rs
hilevel/src/device/: PL011.rs  mod.rs
hilevel/src/io/: PL011.rs  descriptor.rs  error.rs  mod.rs  pipe.rs  tasks.rs
hilevel/src/process/: context.rs  mod.rs  scheduler.rs  table.rs
hilevel/src/process/scheduler/: idle.rs  mod.rs  queues.rs
hilevel/src/util/: mod.rs  table.rs  weak_queue.rs
rust/: .gitignore  Cargo.toml  Makefile  README.md  build.rs  build.sh
rust/src/: lib.rs
