[package]
name = "hilevel"
version = "0.1.0"
authors = ["Jacob Halsey <jacob@jhalsey.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cty = "0.2.1"
num-traits = { version = "0.2", default-features = false }
num-derive = "0.3"
num =  { version = "0.2", default-features = false }

[lib]
crate-type = ["staticlib"]

[build-dependencies]
bindgen = "0.53.1"
cbindgen = "0.13.1"
